# cuda-toy

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  cuda-toy  index.html  index.js  viz.py
include/: linear_layer.hpp  linear_relu_layer.hpp  linear_sigmoid_layer.hpp  linear_softmax_layer.hpp  matrix.h  matrix.hpp  matrix_kernels.cuh  mnist.hpp  mnist_model.hpp
results/: cpu_500.csv  gpu_500.csv  gpu_matmul_500.csv
src/: CMakeLists.txt  linear_layer.hpp  linear_relu_layer.cpp  linear_relu_layer.hpp  linear_sigmoid_layer.cpp  linear_sigmoid_layer.hpp  linear_softmax_layer.cpp  linear_softmax_layer.hpp  main.cpp  main.cu  matrix.cpp  matrix.hpp  matrix_kernels.cu  matrix_wrappers.cu  mnist.cpp  mnist.hpp  mnist_model.cpp  model.cpp  model.hpp
src/not_monke/: linear_relu_layer.cpp  linear_relu_layer.hpp  mnist.cpp
